@@ -1,4 +1,6 @@
-	* On Vista, identify (and ignore) symbolic links
+    * Resolve oldest reported problem - segfault when private key is needed
+      but not available.
+    * On Vista, identify (and ignore) symbolic links
     * Do not terminate as soon as an error occures. Continue at next
       reasonable operation.
 
